--- a/main.html
+++ b/main.html
@@ -4,13 +4,94 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div class="container-fluid">
+		<h3 style="color:#3b99e0; text-align:center">Shopping cart</h3>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8">
+				<div class="product d-flex py-4 justify-content-between">
+					<img class="img-fluid" src="https://plus.unsplash.com/premium_photo-1681702307633-a27a52914043?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8SXBob25lJTIwMTUlMjBzcXVhcmUlMjBpbWFnZXN8ZW58MHx8MHx8fDA%3D">
+					<div>
+						<h5 class="text-primary">I am very sorry</h5>
+						<p>Display: 5 inches</p>
+						<p>RAM: 4GB</p>
+						<p>Memory: 32GB</p>
+					</div>
+					<div>
+						<p>Quantity</p>
+						<button type="button" class="btn text-center w-100 btn-outline-dark">0</button>
+					</div>
+					<p class="mt-5">$120</p>
+				</div>
+				<div class="product d-flex py-4 justify-content-between">
+					<img class="img-fluid" src="https://plus.unsplash.com/premium_photo-1681702307633-a27a52914043?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8SXBob25lJTIwMTUlMjBzcXVhcmUlMjBpbWFnZXN8ZW58MHx8MHx8fDA%3D">
+					<div>
+						<h5 class="text-primary">I am very sorry</h5>
+						<p>Display: 5 inches</p>
+						<p>RAM: 4GB</p>
+						<p>Memory: 32GB</p>
+					</div>
+					<div>
+						<p>Quantity</p>
+						<button type="button" class="btn text-center w-100 btn-outline-dark">1</button>
+					</div>
+					<p class="mt-5">$120</p>
+				</div>
+				<div class="product d-flex py-4 justify-content-between">
+					<img class="img-fluid" src="https://plus.unsplash.com/premium_photo-1681702307633-a27a52914043?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8SXBob25lJTIwMTUlMjBzcXVhcmUlMjBpbWFnZXN8ZW58MHx8MHx8fDA%3D">
+					<div>
+						<h5 class="text-primary">I am very sorry</h5>
+						<p>Display: 5 inches</p>
+						<p>RAM: 4GB</p>
+						<p>Memory: 32GB</p>
+					</div>
+					<div>
+						<p>Quantity</p>
+						<button type="button" class="btn text-center w-100 btn-outline-dark">1</button>
+					</div>
+					<p class="mt-5">$120</p>
+				</div>
+			</div>
+			<div class="col-lg-4 summary">
+				<h4 class="text-center">Summary</h4>
+				<div class="d-flex justify-content-between">
+					<p>Subtotal</p>
+					<p>$360</p>
+				</div>
+				<div class="border border-bottom-dark-subtle"></div>
+				<div class="d-flex justify-content-between">
+					<p>Discount</p>
+					<p>$0</p>
+				</div>
+				<div class="border border-bottom-dark-subtle"></div>
+				<div class="d-flex justify-content-between">
+					<p>Shipping</p>
+					<p>$0</p>
+				</div>
+				<div class="border border-bottom-dark-subtle "></div>
+				<div class="d-flex justify-content-between">
+					<p>Total</p>
+					<p>$360</p>
+				</div>
+				<button type="button" class="btn w-100 bg-primary text-white">checkout</button>
+			</div>
+		</div>
+	</div>
+	
+</div>	
+	
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
+	
 
 </html>
